# gomoku

./: .gitignore  CMakeLists.txt  Main.py  README.md
Windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Tyrannosaurus-R.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pbrain-Tyrannosaurus-R.vcxproj  pbrain-Tyrannosaurus-R.vcxproj.filters
Windows/Debug/: pbrain-Tyrannosaurus-R.ilk
Windows/Tyrannosaurus-R/: Tyrannosaurus-R.sln
Windows/Tyrannosaurus-R/Tyrannosaurus-R/: AIBrain.cpp  AIBrain.hpp  AManager.hpp  Board.hpp  Event.hpp  Main.cpp  Move.cpp  MoveManager.cpp  ProtocolManager.cpp  ProtocolManager.hpp  Tyrannosaurus-R.vcxproj  Tyrannosaurus-R.vcxproj.filters
Windows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
Windows/pbrain-Tyrannosaurus-R.dir/Debug/pbrain-T.A2A7B57F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pbrain-Tyrannosaurus-R.lastbuildstate
Windows/pbrain-Tyrannosaurus-R.dir/Release/pbrain-T.A2A7B57F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pbrain-Tyrannosaurus-R.lastbuildstate
include/: AIBrain.hpp  AManager.hpp  Board.hpp  EScore.hpp  ESquareType.hpp  Event.hpp  Mediator.hpp  Move.hpp  MoveManager.hpp  ProtocolManager.hpp
src/: AIBrain.cpp  AManager.cpp  Board.cpp  Main.cpp  Mediator.cpp  Move.cpp  MoveManager.cpp  ProtocolManager.cpp  main.cpp
(+3 files in other folders)
